# gameplay_proto

./: Cargo.toml
documentation/: Architecture.md  learning.todo
documentation/game design/: Challenge.md  Combat.md  General.md  MonstersNames.md  v0.1.todo  v0.todo  v1.todo
src/: main.rs
src/plugins/: camera.rs  combat.rs  hud.rs  inputs.rs  location.rs  mod.rs  player.rs  population.rs  ui.rs  world.rs
src/plugins/combat/: combat_events.rs  combat_plugin.rs  mod.rs
src/plugins/combat/ai/: aggro.rs  mod.rs  monster_attack.rs  receive_damages.rs
src/plugins/combat/weapons/range/: bow.rs  mod.rs  projectile.rs
src/plugins/creature/: creature_plugin.rs  mod.rs
src/plugins/creature/systems/: inventory.rs  mod.rs  physical.rs  sensors.rs  stats.rs  ui.rs  visual.rs
src/plugins/items/: items_plugin.rs  mod.rs
src/plugins/items/systems/: create_items.rs  dropped_items.rs  equip_item.rs  mod.rs  update_items.rs  use_item.rs
src/plugins/items/weapons/melee/: sword.rs
src/plugins/player/: mod.rs  player_events.rs  player_plugin.rs
src/plugins/player/control/: keyboard_actions.rs  keyboard_movement.rs  mod.rs  mouse.rs  mouse_left.rs  mouse_move.rs  mouse_right.rs
src/plugins/player/lifecycle/: die.rs  respawn.rs
src/utils/: error.rs  vec.rs
