[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.1", features = ["dynamic"] }
rand = "0.8.5"
thiserror = "1.0.37"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
bevy-inspector-egui = "0.13.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
